[metadata]
license-file = LICENSE.txt
description-file = README.md

[isort]
multi_line_output=3
include_trailing_comma=True
force_grid_wrap=0
use_parentheses=True
line_length=119
default_section=THIRDPARTY
known_django=django
known_first_party=crispy_forms
sections=FUTURE,STDLIB,THIRDPARTY,DJANGO,FIRSTPARTY,LOCALFOLDER

[flake8]
max-line-length = 119
statistics = True
count = True
select = C,E,F,W,B
ignore = E203, W503
