[bumpversion]
current_version = 0.8.0
commit = True
tag = True

[metadata]
license_file = LICENSE
description_file = README.rst

[isort]
profile = black
default_section = THIRDPARTY
known_django = django
known_first_party = crispy_bulma,crispy_forms
sections = FUTURE,STDLIB,THIRDPARTY,DJANGO,FIRSTPARTY,LOCALFOLDER
skip = .tox,docs

[tool:pytest]
DJANGO_SETTINGS_MODULE = tests.test_settings
norecursedirs = .git .tox docs
collect_ignore = ["setup.py"]

[flake8]
exclude = .tox,docs
max-line-length = 119
statistics = True
count = True
select = C,E,F,W,B
ignore = E203, W503

[bumpversion:file:setup.py]
search = version="{current_version}"
replace = version="{new_version}"

[bumpversion:file:crispy_bulma/__init__.py]
search = __version__ = "{current_version}"
replace = __version__ = "{new_version}"
